# twin-brain

./: .gitignore  LICENSE  README.md  requirements.txt  setup.py
apps/cards-memex/: ITERATION_GUIDE.md  README.md  catchup.py  main.py  run.sh
apps/cards-memex/config/: behavior.yaml  feedback.yaml  gaps.yaml  retrieval.yaml  role.yaml  ux.yaml
apps/cards-memex/docs/: DIMENSION_REGISTRY.md
apps/cards-memex/evals/: golden_dataset.jsonl
apps/cards-memex/scripts/: README.md  query_channel_ids.py  reindex_watched.py  (+7 more)
apps/your-twin-brain/: .env.example  ITERATION_GUIDE.md  README.md  catchup.py  main.py  run.sh  slack-app-manifest.yaml
libs/memex-core/: README.md  pyproject.toml
libs/memex-core/memex_core/: __init__.py  core.py  models.py  utils.py
libs/memex-core/memex_core/ai/: __init__.py  classifier.py  client.py  gap_checker.py  generator.py  memory_extractor.py
libs/memex-core/memex_core/eval/: __init__.py  judge.py  metrics.py
libs/memex-core/memex_core/feedback/: __init__.py  tracker.py
libs/memex-core/memex_core/formatters/: __init__.py  citation_formatter.py  response_formatter.py
libs/memex-core/memex_core/memory/: __init__.py  curator.py
libs/memex-core/memex_core/pipelines/: __init__.py  consolidation.py  ingestion.py  maintenance.py  retrieval.py
libs/memex-core/memex_core/prompts/: __init__.py  answer.jinja2  classify.jinja2  consolidate.jinja2  detect_supersession.jinja2  extract_memories.jinja2
libs/memex-core/memex_core/ranking/: __init__.py  freshness.py
libs/memex-core/memex_core/storage/: __init__.py  vector_store.py
(+49 files in other folders)
